ajout de style et de html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,101 @@
 	<title>CV</title>
 </head>
 <body>
+	<header>
+		<div>
+			<div>
+				<img src="" alt="">
+				<h1>Photo</h1>
+			</div>
+			<div>
+				<ul>
+					<h1>Maxime ROMA</h1>
+					<h2>Développeur Web</h2>
+				</ul>
+			</div>
+		</div>
+	</header>
+	
+	<div id="side-nav">
+		<nav>
+			<ul>
+				<li><h2>Compétences</h2></li>
+				<li><h2>Expériences</h2></li>
+				<li><h2>Formation</h2></li>
+			</ul>		
+		</nav>
+		
+		<main>
+			<section>
+				<ul>
+					<li>Permis B</li>
+					<li>Bonne pratique de fabrication (norme BPF)</li>
+					<li>Brevet Informatique et Internet</li>
+					<li>Brevet d'initiation à l'informatique</li>
+				</ul>
+			</section>
+			<section>
+				<ul>
+					<li>Développement Web (formation en cours ...)</li>
+					<li>DUT GTE, Prépa PCSI : 2013/2015</li>
+					<li>Bac S : 2012</li>
+				</ul>
+			</section>
+		
+			<section>
+				<ul>
+					<li>Travaux saisonniers</li>
+					<li>Opérateur topographique</li>
+					<li>Opérateur de production</li>
+				</ul>
+			</section>			
+		</main>
+		<aside>
+			<ul>
+				<li>Réseaux sociaux: </li>
+				<li>	           
+	                <span class="fa-stack fa-lg">
+					  	<i class="fa fa-square-o fa-stack-2x"></i>
+					  	<i class="fa fa-envelope fa-stack-1x"></i>
+					</span>																
+				</li>
+				<li>
+            		<span class="fa-stack fa-lg">
+							<i class="fa fa-square-o fa-stack-2x"></i>
+							<i class="fa fa-facebook fa-stack-1x"></i>
+					</span>									
+				</li>
+				<li>
+					<span class="fa-stack fa-lg">
+					  	<i class="fa fa-square-o fa-stack-2x"></i>
+					  	<i class="fa fa-twitter fa-stack-1x"></i>
+					</span>								
+				</li>
+			</ul>	
+		</aside>
+	</div>
 
+	<footer>
+		<div>
+			<h1>Contact : </h1>
+		</div>
+		<div>
+			<ul>
+				<li>20 cité du midour 32110 NOGARO</li>
+				<li>
+					<span>
+		                <span class="fa-stack fa-lg">
+						  	<i class="fa fa-square-o fa-stack-2x"></i>
+						  	<i class="fa fa-envelope fa-stack-1x"></i>
+						</span>
+						roma.maxime1994@gmail.com					
+					</span>
+				</li>
+				</a>		
+				<li>06.23.38.37.68</li>
+			</ul>
+		</div>
+	</footer>
+	<script src="https://use.fontawesome.com/6baadd765c.js"></script>
 </body>
 </html>
