--- a/index.html
+++ b/index.html
@@ -9,75 +9,253 @@
 	<header>
 		<div>
 			<div>
-				<img src="" alt="">
-				<h1>Photo</h1>
+				<img src="assets/photo.jpg" alt="yoyo">
 			</div>
 			<div>
 				<ul>
 					<h1>Maxime ROMA</h1>
-					<h2>Développeur Web</h2>
+					<h2>Développeur Web Junior</h2>
 				</ul>
+			</div>
+			<div>
+				<ul>
+					<li>Réseaux sociaux: </li>
+					<li>
+						<span class="fa-stack fa-lg">
+						  	<i class="fa fa-square-o fa-stack-2x"></i>
+						  	<i class="fa fa-twitter fa-stack-1x"></i>
+						</span>								
+					</li>
+					<li>
+						<span class="fa-stack fa-lg">
+						  	<i class="fa fa-square-o fa-stack-2x"></i>
+							<i class="fa fa-linkedin fa-stack-1x"></i>
+						</span>
+					</li>
+					<li>
+						<span class="fa-stack fa-lg">
+						  	<i class="fa fa-square-o fa-stack-2x"></i>
+							<i class="fa fa-github fa-stack-1x"></i>
+						</span>					
+					</li>
+				</ul>	
 			</div>
 		</div>
 	</header>
 	
-	<div id="side-nav">
-		<nav>
-			<ul>
-				<li><h2>Compétences</h2></li>
-				<li><h2>Expériences</h2></li>
-				<li><h2>Formation</h2></li>
-			</ul>		
-		</nav>
-		
+	<div id="side-nav">		
 		<main>
-			<section>
-				<ul>
-					<li>Permis B</li>
-					<li>Bonne pratique de fabrication (norme BPF)</li>
-					<li>Brevet Informatique et Internet</li>
-					<li>Brevet d'initiation à l'informatique</li>
-				</ul>
+			<section id="compétences">
+				<div id="titre-competences">
+					<h1><i class="fa fa-code fa-lg"></i> Compétences</h1>
+				</div>
+				<div>
+					<div>
+						<div>
+							<ul>
+								<li>
+									<div>Langages</div>
+								</li>
+								<li>
+									<ul>
+										<li>
+											<ul>
+												<li>Javascript</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>	
+												</li>
+											</ul>
+										</li>
+										<li>	
+											<ul>
+												<li>HTML</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>		
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>	
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>	
+												</li>
+											</ul>
+										</li>
+										<li>
+											<ul>
+												<li>CSS</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>	
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>		
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>		
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>	
+												</li>
+											</ul>
+										</li>
+									</ul>									
+								</li>
+							</ul>
+						</div>
+						<div>
+							<ul>
+								<li>
+									<div>Technologies</div>
+								</li>
+								<li>
+									<ul>
+										<li>
+											<ul>
+												<li>Express.js</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>	
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>
+												</li>
+												<li>													<i class="fa fa-star fa-stack-lg"></i>
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>		
+												</li>
+											</ul>
+										</li>
+										<li>
+											<ul>
+												<li>Node.js</li>
+												<li>												
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>												
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>											
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+						<div>
+							<ul>
+								<li>
+									<div>Outil</div>
+								</li>
+								<li>
+									<ul>
+										<li>
+											<ul>
+												<li>Git</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>	
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>
+												</li>
+												<li>													<i class="fa fa-star fa-stack-lg"></i>
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>		
+												</li>
+											</ul>
+										</li>
+										<li>
+											<ul>
+												<li>Github</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>			
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>	
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>
+												</li>
+												<li>													<i class="fa fa-star fa-stack-lg"></i>
+												</li>
+												<li>
+													<i class="fa fa-star fa-stack-lg"></i>		
+												</li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+							</ul>
+						</div> 
+					</div>
+				</div>
 			</section>
-			<section>
-				<ul>
-					<li>Développement Web (formation en cours ...)</li>
-					<li>DUT GTE, Prépa PCSI : 2013/2015</li>
-					<li>Bac S : 2012</li>
-				</ul>
+			<section id="formation">
+				<div>
+					<h1><i class="fa fa-graduation-cap fa-lg"></i> Formation Développeur Web</h1>
+					<p>En cours</p>
+				</div>
+				<div id="liste-formation">
+					<div>						
+						<ul>
+							<li><h4>Languages et Technologies</h4></li>
+							<li>Front-End: HTML/CSS, Javascript, Sass.</li>
+							<li>Back-End: Node.js, Express.js.</li>
+							<li>Git, Github.</li>
+						</ul>
+					</div>
+					<div>
+						<ul>
+							<li><h4>Outils et Gestion de projet</h4></li>
+							<li>Méthodes Agiles: Kanban/Trello</li>
+							<li>Pair-programming & Mobe-programming</li>
+						</ul>
+					</div>
+				</div>
 			</section>
-		
 			<section>
 				<ul>
 					<li>Travaux saisonniers</li>
 					<li>Opérateur topographique</li>
 					<li>Opérateur de production</li>
+					<li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus temporibus optio ullam aliquam rerum est. Quos aperiam minima molestias consequuntur sint labore quae, rerum? Consequuntur optio sapiente dicta quidem, ratione?</li>
 				</ul>
 			</section>			
 		</main>
-		<aside>
-			<ul>
-				<li>Réseaux sociaux: </li>
-				<li>	           
-	                <span class="fa-stack fa-lg">
-					  	<i class="fa fa-square-o fa-stack-2x"></i>
-					  	<i class="fa fa-envelope fa-stack-1x"></i>
-					</span>																
-				</li>
-				<li>
-            		<span class="fa-stack fa-lg">
-							<i class="fa fa-square-o fa-stack-2x"></i>
-							<i class="fa fa-facebook fa-stack-1x"></i>
-					</span>									
-				</li>
-				<li>
-					<span class="fa-stack fa-lg">
-					  	<i class="fa fa-square-o fa-stack-2x"></i>
-					  	<i class="fa fa-twitter fa-stack-1x"></i>
-					</span>								
-				</li>
-			</ul>	
-		</aside>
 	</div>
 
 	<footer>
@@ -101,6 +279,7 @@
 			</ul>
 		</div>
 	</footer>
+
 	<script src="https://use.fontawesome.com/6baadd765c.js"></script>
 </body>
 </html>
