--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
 			<div>
 				<img src="assets/photo.jpg" alt="yoyo">
 			</div>
-			<div>
+			
+			<div class="color">
 				<ul>
 					<h1>Maxime ROMA</h1>
 					<h2>Développeur Web Junior</h2>
 				</ul>
-			</div>
-			<div>
 				<ul>
 					<li>Réseaux sociaux: </li>
 					<li>
